--- a/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
@@ -294,13 +294,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vZB-im-gUb">
-                                        <rect key="frame" x="30" y="110" width="354" height="104"/>
+                                        <rect key="frame" x="30" y="110" width="354" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u0G-Uv-jeS" customClass="MultiProgressView" customModule="MultiProgressView">
-                                        <rect key="frame" x="67" y="216" width="280" height="6"/>
+                                        <rect key="frame" x="67" y="154" width="280" height="6"/>
                                         <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="6" id="5Iy-wV-LLZ"/>
@@ -312,11 +312,27 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nbA-n0-fZf">
+                                        <rect key="frame" x="67" y="180" width="280" height="12.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="280" id="4eW-6W-Kol"/>
+                                        </constraints>
+                                        <attributedString key="attributedText">
+                                            <fragment content="Label">
+                                                <attributes>
+                                                    <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                    <font key="NSFont" size="11" name=".SFNS-Regular"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="W1Y-8r-pNG">
-                                        <rect key="frame" x="20" y="242" width="374" height="158"/>
+                                        <rect key="frame" x="20" y="280" width="374" height="120"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="158" id="pTC-Nc-tdX"/>
+                                            <constraint firstAttribute="height" constant="120" id="njF-9a-4xN"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vAk-OI-pyR">
                                             <size key="itemSize" width="128" height="128"/>
@@ -369,13 +385,15 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="nbA-n0-fZf" firstAttribute="top" secondItem="u0G-Uv-jeS" secondAttribute="bottom" constant="20" id="0tk-tY-CXQ"/>
                                     <constraint firstAttribute="bottom" secondItem="W1Y-8r-pNG" secondAttribute="bottom" id="1ah-Pj-9yh"/>
                                     <constraint firstItem="vZB-im-gUb" firstAttribute="left" secondItem="av8-Ad-Ojo" secondAttribute="left" constant="30" id="35R-OG-dYx"/>
                                     <constraint firstItem="u0G-Uv-jeS" firstAttribute="centerX" secondItem="av8-Ad-Ojo" secondAttribute="centerX" id="59t-2K-2vb"/>
                                     <constraint firstAttribute="trailing" secondItem="W1Y-8r-pNG" secondAttribute="trailing" constant="20" id="AdR-VO-lcZ"/>
-                                    <constraint firstItem="u0G-Uv-jeS" firstAttribute="top" secondItem="vZB-im-gUb" secondAttribute="bottom" constant="2" id="Da3-W7-vgQ"/>
+                                    <constraint firstItem="u0G-Uv-jeS" firstAttribute="top" secondItem="vZB-im-gUb" secondAttribute="bottom" constant="20" id="Da3-W7-vgQ"/>
+                                    <constraint firstItem="W1Y-8r-pNG" firstAttribute="top" relation="greaterThanOrEqual" secondItem="nbA-n0-fZf" secondAttribute="bottom" constant="40" id="IVb-PC-hRn"/>
                                     <constraint firstAttribute="trailing" secondItem="vZB-im-gUb" secondAttribute="trailing" constant="30" id="U3s-ce-PoN"/>
-                                    <constraint firstItem="W1Y-8r-pNG" firstAttribute="top" secondItem="u0G-Uv-jeS" secondAttribute="bottom" constant="20" id="Ygt-fT-WVs"/>
+                                    <constraint firstItem="nbA-n0-fZf" firstAttribute="centerX" secondItem="av8-Ad-Ojo" secondAttribute="centerX" id="cIR-9f-ZJg"/>
                                     <constraint firstItem="vZB-im-gUb" firstAttribute="top" secondItem="av8-Ad-Ojo" secondAttribute="top" constant="110" id="cWB-pA-hNs"/>
                                     <constraint firstAttribute="height" constant="400" id="wza-WH-jX0"/>
                                     <constraint firstItem="W1Y-8r-pNG" firstAttribute="leading" secondItem="av8-Ad-Ojo" secondAttribute="leading" constant="20" id="xwe-Ch-Qya"/>
@@ -426,6 +444,7 @@
                     </view>
                     <connections>
                         <outlet property="actionButtonsCollection" destination="W1Y-8r-pNG" id="M5f-YK-9KB"/>
+                        <outlet property="progressDescription" destination="nbA-n0-fZf" id="acu-xf-WG1"/>
                         <outlet property="projectDetailsTableView" destination="NEd-f8-i6a" id="KCv-UN-qFG"/>
                         <outlet property="projectTitle" destination="vZB-im-gUb" id="h2S-n2-Dh3"/>
                         <outlet property="projectTitleTopConstraint" destination="cWB-pA-hNs" id="yvP-Z3-p6c"/>
